--- a/progress.html
+++ b/progress.html
@@ -56,7 +56,7 @@ Software Engineering <br>
 <progress id="se" value="11" max="18"></progress> <span id="ses"></span> <br><br>
 
 Computational Vision <br>
-<progress value="13" max="13"></progress> 13/13 - DONE<br><br>
+<progress value="13" max="13"></progress> DONE<br><br>
 
 Models of Computation (<a href="#" onclick="if(document.getElementById('modelstopics').style.display==='none') {document.getElementById('modelstopics').style.display=''; this.innerHTML='Hide';} else {document.getElementById('modelstopics').style.display='none'; this.innerHTML='Topic list'}">Topic list</a>) <br>
 <progress value="7" max="31"></progress> 7/31<br><br>
