--- a/databases.html
+++ b/databases.html
@@ -136,9 +136,9 @@ Table of Contents
     <li><a href="#session"> Session Tracking </a><ol>
         <li><a href="#session1"> Ways to Track </a></li>
     </ol></li>
-    <li><a href="#normalisation"> Database Normalisation </a><ul>
+    <li><a href="#normalisation"> Database Normalisation </a><ol>
         <li><a href="#normalisation1"> Conclusion </a></li>
-    </ul></li>
+    </ol></li>
     <li><a href="#papers"> Exam Paper </a></li>
 </ol>
 <hr/> <!------------------------------------------------------------------------------->
@@ -1208,9 +1208,9 @@ Table of Contents
     <cite>-Bob</cite>
 </blockquote>
 
-<p> <a href="http://www.cs.bham.ac.uk/~rjh/courses/IntroToDBs/2016-17/Example%20Paper.pdf">Example Paper</a> </p>
+<p> <a href="images/database/paper.pdf">Example Paper</a> </p>
 
-<div style="display: inline-block;"><iframe width="700" height="800" src="http://www.cs.bham.ac.uk/~rjh/courses/IntroToDBs/2016-17/Example%20Paper.pdf" allowfullscreen>Your browser does not support iFrames.</iframe></div>
+<div style="display: inline-block;"><iframe width="700" height="800" src="images/database/paper.pdf" allowfullscreen>Your browser does not support iFrames.</iframe></div>
 
 <div style="display: inline-block; background-color: #f7ffe4; width: 700px; height: 800px; overflow: auto;">
     <h4> You may practice, then click each boxes to reveal answers for Example Paper </h4>
