Adds Professional Computing Complete Notes.

--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@
             <td> Friday </td>
             <td> 12/05/2017 </td>
             <td align="center"> 09:30 </td>
-            <td> <a href="professionalcomputing.html"> LI Professional Computing </a> </td>
+            <td> 
+            	<a href="professionalcomputing.html"> LI Professional Computing </a>
+            	<br>
+            	<a href="ProfComp-CourseNotes.pdf"> LI Professional Computing (PDF) </a> 
+            </td>
             <td> Great Hall </td>
             <td align="center"> 141 </td>
             <td align="center"> 21 </td>
