--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <td align="center"> 37 </td>
             <td align="center"> - </td>
             <td align="center"> - </td>
-            <td align="center"> N/A </td>
+            <td align="center"> - </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="softEng"></p> </td>
@@ -82,7 +82,7 @@
             <td align="center"> - </td>
             <td align="center"> 5 </td>
             <td align="center"> - </td>
-            <td align="center"> N/A </td>
+            <td align="center"> - </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="vision"></p> </td>
@@ -96,7 +96,7 @@
             <td align="center"> 137 </td>
             <td align="center"> 21 </td>
             <td align="center"> 84 </td>
-            <td align="center"> N/A </td>
+            <td align="center"> 28 </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="models"></p> </td>
@@ -110,7 +110,7 @@
             <td align="center"> 210 </td>
             <td align="center"> 90 </td>
             <td align="center"> 156 </td>
-            <td align="center"> N/A </td>
+            <td align="center"> 97 </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="databases"></p> </td>
@@ -128,7 +128,7 @@
             <td align="center"> 141 </td>
             <td align="center"> 21 </td>
             <td align="center"> 87 </td>
-            <td align="center"> N/A </td>
+            <td align="center"> 28 </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="profComp"></p> </td>
@@ -142,7 +142,7 @@
             <td align="center"> 332 </td>
             <td align="center"> 216 </td>
             <td align="center"> 279 </td>
-            <td align="center"> N/A </td>
+            <td align="center"> 223 </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="csa"></p> </td>
@@ -156,7 +156,7 @@
             <td align="center"> 39 </td>
             <td align="center"> 10 </td>
             <td align="center"> 22 </td>
-            <td align="center"> N/A </td>
+            <td align="center"> 11 </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="ccpp"></p> </td>
@@ -170,7 +170,7 @@
             <td align="center"> 42 </td>
             <td align="center"> 11 </td>
             <td align="center"> 32 </td>
-            <td align="center"> N/A </td>
+            <td align="center"> 12 </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="graphics"></p> </td>
@@ -184,7 +184,7 @@
             <td align="center"> 197 </td>
             <td align="center"> 92 </td>
             <td align="center"> 152 </td>
-            <td align="center"> N/A </td>
+            <td align="center"> 98 </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="maths"></p> </td>
@@ -198,7 +198,7 @@
             <td align="center"> 209 </td>
             <td align="center"> 114 </td>
             <td align="center"> 168 </td>
-            <td align="center"> N/A </td>
+            <td align="center"> 119 </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="security"></p> </td>
@@ -212,7 +212,7 @@
             <td align="center"> - </td>
             <td align="center"> - </td>
             <td align="center"> 41 </td>
-            <td align="center"> N/A </td>
+            <td align="center"> 14 </td>
             <td align="center"> N/A </td>
             <td align="center"> 1:30hrs </td>
             <td> <p align="center" style ="font-size: 18px; font-family: Consolas, serif" id="nlp"></p> </td>
