--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <td> Monday </td>
             <td> 15/05/2017 </td>
             <td align="center"> 09:30 </td>
-            <td> <a href="csa.html"> LI Computer Systems and Architecture </a> </td>
+            <td> <a href="CSA-CourseNotes.pdf"> LI Computer Systems and Architecture </a> </td>
             <td> Sports Hall </td>
             <td align="center"> 332 </td>
             <td align="center"> 216 </td>
